--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-   <form action="/cgi-bin/work.py">
+   <form action="work.py">
        <input type="text" name="in_name">       
        <button type="submit">Привітатись</button>  
    </form>
